# ubuntu-autoinstall-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile.build  PLAN-zfs-luks-multikey.md  PLAN.md  README.md  TODO.md  rust-toolchain.toml  todo.md  unimatrixone-pxe-boot-status.md
.cargo/: config.toml
.codex-tmp/: update_len_serv_003_luks.py
.github/: copilot-instructions.md  dependabot.yml  repository-config.yml
.github/workflows/: changelog-check.yml  changelog-collect.yml  ci.yml  constellation-ci.yml  musl-build.yml  release.yml  reusable-ci.yml  reusable-release.yml  spa-build.yml  sync-receiver.yml  todo-collect.yml  workflow-scripts-tests.yml
changelog.d/: 20260719-adopt-todo-fragment-system.md  README.md  adopt-changelog-fragments.md  discovery-identify-fleet-machines.md  discovery-oui-vendor-classify.md  document-fragment-system-for-agents.md  fix-reqwest-pin-012.md  fix-scanner-getent-crash.md  native-layout-boot-on-ssd.md  nativekeystore-recovery-and-timezone.md  profile-system-task-package.md  ps-app-09.md  ps-arch-07.md  ps-disk-01.md  ps-hook-06.md  ps-img-04.md  ps-imsm-17.md  ps-lower-12.md  ps-net-03.md  ps-quirk-05.md  ps-role-08.md  ps-schema-20.md  ps-serial-18.md  ps-unlock-02.md  ps-validate-14.md  ps-vmgate-19.md  ps-wire-axes-10.md  ps-wire-partial-11.md  sanitize-len-serv-configs.md  scriv.ini  serial-console-installed-system.md  u1-phase1-partitioner.md  u1-phase2-native-pool.md  u1-plan-storage-mode-as-profile.md  u1-zfs-native-encryption-plan.md
changelog.d/templates/: new_fragment.md.j2
crates/uaa/: Cargo.toml
crates/uaa-control/: Cargo.toml  build.rs
crates/uaa-control/migrations/: 0001_init.sql
crates/uaa-control/src/: audit.rs  auth.rs  ca.rs  discovered.rs  enroll.rs  import_export.rs  lib.rs  listeners.rs  main.rs  oui.rs  oui_data.csv  reinstall.rs  saga.rs
crates/uaa-control/src/db/: migrations.rs  mod.rs  registry.rs  store.rs
crates/uaa-control/src/machine_plane/: dashboard.rs  inventory.rs  lifecycle.rs  mod.rs  seeds.rs  staleness.rs
crates/uaa-control/src/operator/: api_types.rs  handlers.rs  mod.rs  web_ui.rs
crates/uaa-control/src/profiles/: alloc.rs  convert.rs  drift.rs  mod.rs  reify.rs  resolve.rs  store.rs
crates/uaa-control/systemd/: uaa-arp-discovery.service  uaa-control.service  uaa-control.socket
crates/uaa-core/: Cargo.toml
crates/uaa-core/src/: app_status.rs  config_place.rs  discovery.rs  error.rs  fleet.rs  lib.rs  luks_keys.rs  luks_sync.rs  pki.rs  tls.rs  update.rs  vm_validate.rs
crates/uaa-core/src/autoinstall/: host_spec.rs  mod.rs  place.rs  render.rs  verify.rs
crates/uaa-core/src/config/: image.rs  loader.rs  mod.rs  target.rs
crates/uaa-core/src/image/: customizer.rs  deployer.rs  manager.rs  mod.rs
crates/uaa-core/src/image/builder/: cloudinit.rs  disk.rs  iso.rs  mod.rs  postprocess.rs
crates/uaa-core/src/iso/: image_build.rs  mod.rs  remaster.rs
crates/uaa-core/src/logging/: logger.rs  mod.rs
crates/uaa-core/src/network/: download.rs  executor.rs  local.rs  mod.rs  ssh.rs
crates/uaa-core/src/network/ssh_installer/: applications.rs  config.rs  disk_native.rs  disk_ops.rs  installer.rs  investigation.rs  layout.rs  mod.rs  packages.rs  partitions.rs  reset_partition.rs  status.rs  system_setup.rs  zfs_native.rs  zfs_ops.rs
crates/uaa-core/src/network/ssh_installer/components/: disk_layout.rs  firmware_quirks.rs  hooks.rs  mod.rs
crates/uaa-core/src/power/: amt_wol.rs  dash.rs  mod.rs
crates/uaa-core/src/profile/: lower.rs  merge.rs  mod.rs  validate.rs
crates/uaa-core/src/profile/components/: base_image.rs  mod.rs  network.rs  unlock_policy.rs
crates/uaa-core/src/security/: luks.rs  mod.rs  validation.rs
crates/uaa-core/src/utils/: coreutils.rs  disk.rs  mod.rs  qemu.rs  system.rs  vm.rs
crates/uaa-core/tests/: integration_test.rs
crates/uaa-proto/: Cargo.toml  build.rs
crates/uaa-proto/src/: lib.rs
crates/uaa/src/: lib.rs  main.rs
crates/uaa/src/cli/: args.rs  commands.rs  config.rs  enroll.rs  image.rs  iso.rs  luks.rs  mod.rs  vm_validate.rs
docs/: architecture-path-split.md  iot-devices-wrong-vlan.md  m715q-intel-amt-setup.md  netboot-autodeploy.md  tang-architecture.md  vm-validation.md  yubikey-management.md
docs/agent-tasks/: 2026-07-16-zfs-native-encryption-research-prompt.md  BREAKDOWN-2026-07-10.md  BREAKDOWN-2026-07-16.md  DEFERRED.md  ORCHESTRATION.md  README.md
docs/constellation/: 00-ROADMAP.md  EXECUTION-STATUS-2026-07-10.md
docs/deploy-system/: 00-ROADMAP.md
docs/executive-summaries/: 2026-07-11-constellation-rebuild-executive-summary.md
docs/process/: executive-summaries.md  status-reports.md
docs/research/: 2026-07-17-zfs-native-encryption-design-review.md  2026-07-17-zfs-native-encryption-recommendation.md  2026-07-17-zfs-native-encryption-unlock-architecture.md
docs/specs/: constellation-design.md  constellation-plan.md  deploy-system-design.md  deploy-system-plan.md  install-server-design.md  install-server-plan.md  installer-robustness-design.md  installer-robustness-plan.md  phase-selective-rerun-design.md  phase-selective-rerun-plan.md  profile-system-current-state.md  profile-system-design.md  qemu-validation-design.md  qemu-validation-plan.md  remote-power-design.md  remote-power-plan.md  reset-partition-design.md  reset-partition-plan.md  u1-zfs-native-encryption-design.md  u1-zfs-native-encryption-plan.md
docs/status/: 2026-07-10-constellation-execution-executive-summary.md  2026-07-11-constellation-rebuild-wave1.md  2026-07-11-u1-autoinstall-debug-session.md  (+2 more)
installer-image/: uaa-autoinstall.service  uaa-autoinstall.sh
scripts/: arp-discovery-scan.sh  assemble_todo.py  autoinstall-agent.py  build-all.sh  build-installer-image.sh  build-musl.sh  capture-uni-boot.sh  create-autoinstall-iso.sh  deploy-usb-configs.sh  make-ssh-ready-iso.sh  remote-usb-reflash.sh  server-deploy.sh  setup-github-oauth-env.sh  vm-validate.sh
src/: lib.rs  main.rs
todo.d/: README.md  todo.ini
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+232 files in other folders)
