[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jdfalk/ubuntu-autoinstall-agent"

[workspace.dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network Operations
# Use rustls-tls to avoid OpenSSL dependency issues on cross/musl targets
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
# Prefer vendored sources on Windows to simplify CI; default elsewhere
ssh2 = { version = "0.9", default-features = false, features = ["vendored-openssl"] }

# Cryptography
ring = "0.17"
sha2 = "0.10"

# File Operations
tempfile = "3.8"
walkdir = "2.4"
dirs = "5.0"

# System Operations
nix = "0.27"

# Progress Indicators
indicatif = "0.17"

# UUID Generation
uuid = { version = "1.6", features = ["v4"] }

# Async traits
async-trait = "0.1"

# Futures and async utilities
futures = "0.3"

# Additional dependencies
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Dev dependencies
tokio-test = "0.4"
