[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jdfalk/ubuntu-autoinstall-agent"

[workspace.dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network Operations
# Use rustls-tls to avoid OpenSSL dependency issues on cross/musl targets
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
# Prefer vendored sources on Windows to simplify CI; default elsewhere
ssh2 = { version = "0.9", default-features = false, features = ["vendored-openssl"] }

# Cryptography
ring = "0.17"
sha2 = "0.11"

# File Operations
tempfile = "3.8"
walkdir = "2.4"
dirs = "6.0"

# System Operations
nix = "0.31"

# Progress Indicators
indicatif = "0.18"

# UUID Generation
uuid = { version = "1.6", features = ["v4"] }

# Async traits
async-trait = "0.1"

# Futures and async utilities
futures = "0.3"

# Additional dependencies
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Dev dependencies
tokio-test = "0.4"

# constellation deps (CP-02) — later crates reference these with workspace = true
axum = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "3.0", features = ["rand_core"] }
mdns-sd = "0.20"
notify = "6.1"
prost = "0.14"
prost-types = "0.14"
protox = "0.9"
rand = "0.10"
rcgen = "0.14"
rust-embed = "8.5"
rustls = "0.23"
semver = { version = "1.0", features = ["serde"] }
tokio-postgres = "0.7"
tokio-rustls = "0.26"
tonic = "0.14"
tonic-build = "0.14"
tower-http = { version = "0.7", features = ["fs"] }
utoipa = "5.2"
x509-parser = "0.18"
