# file: crates/uaa-control/Cargo.toml
# version: 1.5.0
# guid: 1e1a4386-a459-4a97-8baf-c942283b3107
# last-edited: 2026-07-18

[package]
name = "uaa-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "uaa-control daemon (spec C3): registry system-of-record, listeners + socket activation, snapshot/WAL degraded mode"

[lib]
name = "uaa_control"
path = "src/lib.rs"

[[bin]]
name = "uaa-control"
path = "src/main.rs"

[dependencies]
# Async runtime + CLI
tokio = { workspace = true }
clap = { workspace = true }
# HTTP / gRPC listeners
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower-http = { workspace = true }
# TLS: `:15000` operator plane TLS-terminates with a leaf cert minted by the
# install CA (crate::ca::InstallCa::issue_server_cert), served via axum-server
# (axum 0.7's own axum::serve only accepts a concrete tokio::net::TcpListener, no
# TLS-listener seam — see listeners.rs). `:15001`/`:15002` are still plain scaffolds.
rustls = { workspace = true }
tokio-rustls = { workspace = true }
axum-server = { version = "0.8", features = ["tls-rustls"] }
# Registry system-of-record: tokio-postgres only, per spec Decision 5.
tokio-postgres = { workspace = true }
# Serialization + IDs + hashing
serde = { workspace = true }
serde_json = { workspace = true }
# serde feature is additive on top of the workspace dep (root Cargo.toml untouched);
# WAL/snapshot rows serialize event_id UUIDs to JSON.
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
# Errors + logging + async traits
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
# DS-REG-05: futures::executor::block_on drives the async ProfileStore::put_version
# to completion inside AuditStore::append_in_txn's sync mutation closure (the
# version write commits atomically with the audit row); see profiles::drift.
futures = { workspace = true }
# Wave-4 fillers: OAuth/RBAC (CT-03), audit chain (CT-04), parity endpoints (IP-01/02)
reqwest = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tower = { version = "0.5", features = ["util"] }
# Wave-4 remainder: PKI CA/EnrollService (PK-01), cert-gen tempdir (IP-03)
rcgen = { workspace = true, features = ["x509-parser"] }
x509-parser = { workspace = true, features = ["verify"] }
tempfile = { workspace = true }
# Operator plane (CT-07): embeds web/dist (built by build.rs) into the binary.
rust-embed = { workspace = true }
# Sibling crates
uaa-proto = { path = "../uaa-proto" }
uaa-core = { path = "../uaa-core" }

[dev-dependencies]
tokio-test = { workspace = true }
