[package]
name = "uaa-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated gRPC/protobuf types for the uaa constellation (proto/uaa/**), compiled with protox"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
protox = { workspace = true }
tonic-build = { workspace = true }
