[package]
name = "uaa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Automated Ubuntu server deployment with golden images and LUKS encryption"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ubuntu-autoinstall-agent"
path = "src/main.rs"

[dependencies]
uaa-core = { path = "../uaa-core" }
# DS-OPS-03: `config place --from-registry` resolves configs via
# `uaa_control::resolve_from_registry`. Cycle-free — nothing depends on this
# binary crate, so uaa -> uaa-control -> uaa-core is a clean DAG (verified by
# `cargo build`).
uaa-control = { path = "../uaa-control" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
